--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
           </ol>
 	      <div class="carousel-inner" role="listbox">
-	        <div class="carousel-item active"> <img src="images/Slide 1.jpg" alt="First slide" width="1200" height="600" class="d-block mx-auto img-fluid">
+	        <div class="carousel-item active"> <img src="images/slide 1.jpg" alt="First slide" width="1200" height="600" class="d-block mx-auto img-fluid">
 	          <div class="carousel-caption"> </div>
             </div>
-	        <div class="carousel-item"> <img class="d-block mx-auto img-fluid" src="images/Slide 2.jpg" alt="Second slide">
+	        <div class="carousel-item"> <img class="d-block mx-auto img-fluid" src="images/slide 2.jpg" alt="Second slide">
 	          <div class="carousel-caption">
 	            <h1 class="text-center"><strong></strong></h1>
               </div>
